DEV/src/objects/Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Assignment_Number__c</fullName>
        <displayFormat>AN-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bill_rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assignment</relationshipLabel>
        <relationshipName>Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>Assignment</relationshipLabel>
        <relationshipName>Assignment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tentative</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>